welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value d
      if (d<h){
          ^Diagonal:12: error: value diag is not a member of Int
        setPos(cases diag,cases)
                     ^